# gelato

./: Cargo.toml  README.md
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  writer.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  toolchain.rs
crates/gelato/: Cargo.toml
crates/gelato/src/: main.rs
crates/lex/: Cargo.toml
crates/lex/src/: lib.rs
crates/parse/: Cargo.toml
crates/parse/src/: errors.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lexer.rs  lib.rs  token.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: expansion.rs  lib.rs  resolution.rs  resolve.rs  translate.rs  typecheck.rs
examples/: interop.gl  scopes.gl  variables.gl
