[workspace]
members = [
    "crates/ast",
    "crates/gelato",
    "crates/lex",
    "crates/parse",
]
resolver = "2"

[workspace.package]
authors = ["Bryan Xavier"]
homepage = "https://github.com/bmxav/gelato"
repository = "https://github.com/bmxav/gelato"
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
ast = { path = "crates/ast" }
lex = { path = "crates/lex" }
parse = { path = "crates/parse" }

anyhow = "1.0.91"
thiserror = "1.0.65"
