[workspace]
members = [
    "crates/ast",
    "crates/gelato",
    "crates/parser",
    "crates/syntax",
]
resolver = "2"

[workspace.package]
authors = ["Bryan Xavier"]
homepage = "https://github.com/bmxav/gelato"
repository = "https://github.com/bmxav/gelato"
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
ast = { path = "crates/ast" }
parser = { path = "crates/parser" }
syntax = { path = "crates/syntax" }

anyhow = "1.0.91"
thiserror = "1.0.65"
