[package]
name = "parse"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }

[dependencies]
ast = { workspace = true }
lex = { workspace = true }

thiserror = { workspace = true }
